--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "lucide-vue-next": "^0.453.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
