--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "lucide-vue-next": "^0.453.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuetify": "^3.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
